--- a/css/contact.css
+++ b/css/contact.css
@@ -2,22 +2,21 @@
 
 #contact-title {
     padding-top: 20px;
-    width: 100%;
+    width: 90%;
 }
 
 #contact-us {
     color: white;
     display: block;
-    background-color: #791D7E;
+    background-color: #500d68;
     text-align: center;
     padding: 8px;
     margin: 0;
-    /*height: 30px;*/
     width: 130px;
 }
 
 #para-block {
-    width: 100%;
+    width: 90%;
 }
 
 #para {
@@ -29,7 +28,6 @@
     box-sizing: content-box;
     padding: 5px 5px 5px 5px;
     background-color: #791D7E;
-    max-width: auto;
 }
 
 .titleBlocks{
@@ -42,7 +40,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 100%;
+    width: 90%;
 }
 
 #contact1{
