--- a/css/footer.css
+++ b/css/footer.css
@@ -1,20 +1,12 @@
+/*Footer*/
 .footerRule{
-    height: 100px;
-    /*width: 90%;*/
+    height: 110px;
     background-color: #791D7E;
     position: relative;
     padding-left: 0;
-    /*margin-left: auto;*/
-    /*margin-right: auto;*/
 }
 
-#icon{
-    width: 27px;
-    height: 27px;
-    padding-left: 10px;
-    margin-top: -5px;
-}
-
+/*"Connect With Us"*/
 #footerText{
     color: white;
     font-weight: 600;
@@ -23,6 +15,7 @@
     text-align: center;
 }
 
+/*Social Media Icon Container*/
 #sm-icons {
     display: flex;
     flex-direction: row;
@@ -31,3 +24,13 @@
     margin-right: auto;
     justify-content: center;
 }
+
+/*Social Media Icons*/
+.sm-icon{
+    width: 27px;
+    height: 27px;
+    padding: 5px;
+    border-radius: 12px;
+}
+
+
