--- a/css/course-style.css
+++ b/css/course-style.css
@@ -18,7 +18,7 @@ body {
 .course-title {
     color: white;
     display: block;
-    background-color: #791D7E;
+    background-color: #500d68;
     text-align: center;
     padding: 10px;
     width: 200px;
