--- a/css/news-style.css
+++ b/css/news-style.css
@@ -6,7 +6,7 @@
 
 .main-heading {
     text-align: center;
-    background-color: #791D7E;
+    background-color: #500d68;
     color: white;
     width: 40%;
     height: 30px;
@@ -34,6 +34,7 @@
     text-align: justify;
     width: 90%;
     font-size: 16px;
+    margin: 50px 0;
 }
 
 .subtitle {
@@ -50,9 +51,9 @@
 .article {
     float: right;
     width: 90%;
-    /*text-align: justify;*/
 }
 
+/*Position First Row of Articles*/
 .row1 {
     display: flex;
     flex-direction: row;
@@ -60,6 +61,7 @@
     justify-content: left;
 }
 
+/*Position Second Row of Articles*/
 .row2 {
     display: flex;
     flex-direction: row;
@@ -67,11 +69,9 @@
     justify-content: flex-start;
 }
 
+/*Article Positioning*/
 .row1 section,
 .row2 section {
-    /*display: flex;*/
-    /*flex-direction: column;*/
-    /*align-items: center;*/
     width: 250px;
     margin: 10px;
 }
