--- a/css/placement-style.css
+++ b/css/placement-style.css
@@ -22,7 +22,7 @@
 #placement-title {
     color: white;
     display: block;
-    background-color: #791D7E;
+    background-color: #500d68;
     text-align: center;
     padding: 10px;
     width: 200px;
@@ -84,7 +84,7 @@ div {
     display: inline-block;
     text-align: center;
     color: white;
-    background-color: rgba(80, 13, 104, 1);
+    background-color: #791D7E;
     position: relative;
     overflow: hidden;
     z-index: 1;
