Finalising Web Pages

--- a/css/news-style.css
+++ b/css/news-style.css
@@ -19,7 +19,7 @@
 
 .news-heading {
     text-align: center;
-    background-color: #791D7E;
+    background-color: #500d68;
     color: white;
     width: 90%;
     height: 30px;
